--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
-    "nodemon": "^3.1.7"
+    "mongoose": "^8.7.0",
+    "nodemon": "^3.1.7",
+    "social-media": "file:"
   }
 }
