--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.7",
     "social-media": "file:",
-    "validator": "^13.12.0"
+    "validator": "^13.12.0",
+    "vimeo": "^2.3.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
