--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "passport-apple": "^2.0.2",
     "passport-google-oauth20": "^2.0.0",
     "social-media": "file:",
+    "twilio": "^5.3.3",
     "validator": "^13.12.0",
     "vimeo": "^2.3.1"
   },
