--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "social-media": "file:",
     "twilio": "^5.3.3",
     "validator": "^13.12.0",
+    "verify-apple-id-token": "^3.1.2",
     "vimeo": "^2.3.1"
   },
   "devDependencies": {
