--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "custom-passport-apple": "git+https://github.com/gs4lthung/passport-apple",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "express-session": "^1.18.0",
@@ -23,7 +24,6 @@
     "nodemailer": "^6.9.15",
     "nodemon": "^3.1.7",
     "passport": "^0.7.0",
-    "passport-apple": "^2.0.2",
     "passport-google-oauth20": "^2.0.0",
     "social-media": "file:",
     "twilio": "^5.3.3",
