--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "social-media": "file:",
+    "socket.io": "^4.8.0",
     "twilio": "^5.3.3",
     "validator": "^13.12.0",
     "verify-apple-id-token": "^3.1.2",
