--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
     "dev": "nodemon index.js"
-
   },
   "keywords": [],
   "author": "",
@@ -23,6 +22,7 @@
     "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
     "memorystore": "^1.6.7",
+    "moment": "^2.30.1",
     "mongoose": "^8.7.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.15",
