--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@mux/mux-node": "^8.8.0",
     "and": "^0.0.3",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
